added quote route and modified swagger and all enum logic in api's
