# backend/api/helpers/chainHelper.ts
@@ -2,9 +2,12 @@ import { ChainId } from "../common/enums";
 require("dotenv").config();
 const { POLYGON_CHAIN_ID } = process.env;
 
-export const getChainFromId = (id: ChainId): string | undefined => {
-  if (id.toString() === ChainId.Polygon.toString()) {
+export const getChainFromId = (id: string): string | undefined => {
+  console.log("tu sam!")
+  if (ChainId[id] === ChainId.polygonMumbai) {
+    console.log("tu nisam!")
     return POLYGON_CHAIN_ID;
+
   }
   return undefined;
 };
