# backend/api/routes/index.ts
@@ -1,5 +1,5 @@
 import express from "express";
-import {  } from "../controllers/bridgeController";
+import { quote } from "../controllers/bridgeController";
 import { checkAllowance, buildAllowanceTx } from "../controllers/allowanceController";
 import { buildTransaction } from "../controllers/bridgeController";
 
@@ -7,6 +7,8 @@ const routes = express.Router();
 
 routes.get("/approval/build-tx", buildAllowanceTx);
 routes.get("/approval/check-allowance", checkAllowance);
+
 routes.get("/bridge/build-tx", buildTransaction);
+routes.get("/bridge/quote", quote);
 
 export default routes;
